# InnovativeCheeseProducingCompany

./: Aufgaben.ipynb  Notizen_Praxisnahe_Aufgabe.docx  README.md  pyproject.toml
data/: dataset_explanation_en.txt  dataset_explanation_ger.txt  error_messages_accumulated.csv  error_messages_timeline.csv  recipe_data.csv
results/plots/: history_and_forecast_good_packs.html  produced_packs.html  produced_packs_per_month.html  stats_per_error.html  vegan parmesan_daily_produced_packs.html
