[tool.poetry]
name = "icpc"
version = "0.1.0"
description = ""
authors = ["kk-55 <63732956+kk-55@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyspark = { version = "^3.4.0", extras = ["sql", "pandas_on_spark",  "connect"] }
pandas = "^2.0.1"
jinja2 = "^3.1.2"
numpy = "^1.24.3"
plotly = "^5.14.1"
scipy = "^1.10.1"
databricks = "^0.2"
pyarrow = "^12.0.0"
nbformat= ">=4.2.0"
prophet = "^1.1.3"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
